syntax = "proto3";

import "github.com/loomnetwork/go-loom/types/types.proto";

message WithdrawalMessage {
    Address token_owner = 1;
    bytes withdrawal_hash = 2;
}

message BatchWithdrawalFnMessage {
    repeated WithdrawalMessage withdrawal_messages = 1;
}