syntax = "proto3";

message Address {
    string chain_id = 1;
    bytes local = 2;
}

message Transaction {
    uint32 id = 1;
    bytes data = 2;
}

message DummyTx {
    string val = 1;
    string key = 2;
}
